@startuml

title __HUD's Class Diagram__\n

  namespace entities {
    namespace HUD {
      class entities.HUD.BarParticle {
          {static} - HEIGHT : int
          {static} - MAX_ANGLE : int
          {static} - WIDTH : int
          - angle : int
          - directionX : double
          - directionY : double
          - img : BufferedImage
          - nextChangeOn : int
          - rectangle : Rectangle
          - speed : double
          - ticks : int
          + render()
          + tick()
          ~ BarParticle()
      }
    }
  }
  

  namespace entities {
    namespace HUD {
      class entities.HUD.Dice {
          {static} + DICE_HEIGHT : int
          {static} + DICE_WIDTH : int
          {static} - DICE_ANIM_TICKS : int
          - clicked : boolean
          - hitbox : Rectangle
          - roll : int
          - rolled : boolean
          - tickcount : int
          - type : List<Integer>
          + Dice()
          + botRoll()
          + getRoll()
          + getTickCount()
          + isRolled()
          + render()
          + setRoll()
          + setRolled()
          + setTickcount()
          + tick()
          - setChanceRoll()
      }
    }
  }
  

  namespace entities {
    namespace HUD {
      class entities.HUD.Timer {
          {static} - TIMER_HEIGHT : int
          {static} - TIMER_WIDTH : int
          - currentTime : int
          - time : int
          + Timer()
          + render()
          + resetTimer()
          + tick()
          - setcurrentTime()
      }
    }
  }
  

  namespace entities {
    namespace HUD {
      class entities.HUD.UltimateBar {
          {static} + SCALE : double
          {static} + ULTIMATEBAR_HEIGHT : int
          {static} + ULTIMATEBAR_WIDTH : int
          - ULT_LOAD : int
          - barParticle : BarParticle[]
          - characterHover : boolean
          - counterColor : BufferedImage
          - counterImage : BufferedImage[]
          - loadPercentage : float
          - loaded : boolean
          - offSetX : int[]
          - offSetY : int[]
          - square : Rectangle
          + UltimateBar()
          + isLoaded()
          + loadCounterImage()
          + loadCounterImages()
          + render()
          + setUltUsed()
          + tick()
          - loadAnimationRender()
          - loadAnimationTick()
          - renderSquare()
      }
    }
  }
  

  entities.HUD.BarParticle -up-|> entities.Entity
  entities.HUD.Dice -up-|> entities.Entity
  entities.HUD.Timer -up-|> entities.Entity
  entities.HUD.UltimateBar -up-|> entities.Entity
  entities.HUD.UltimateBar o-- entities.counters.Counter : counter


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
